Fix recipe header alignment

--- a/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeHeader/RecipeHeader.css
+++ b/RecipeSesameFrontEnd/src/components/RecipeScreen/RecipeHeader/RecipeHeader.css
@@ -12,7 +12,6 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 100%;
     padding-right: 25px;
 }
 
